# llm-tuning

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: deploy-byo-cloud.md  dspark-spec-decode.md  securing-endpoints.md
gemma4/: README.md  pyproject.toml
gemma4/_common/: __init__.py  gemma4_parser.py  health.py  model_registry.py  sglang_common.py
gemma4/bench/: benchmark.py  capture_samples.py
gemma4/chat_templates/: README.md  TESTING.md  custom_pub_chat_template_gemma4.jinja  live_agentic_probe.py
gemma4/deployments/12b/concurrent/: serve.py
gemma4/deployments/12b/solo/: serve.py
gemma4/deployments/26b/concurrent/: serve.py
gemma4/deployments/26b/solo/: serve.py
gemma4/deployments/31b/concurrent/: serve.py
gemma4/deployments/31b/solo/: serve.py
gemma4/deployments/e2b/concurrent/: serve.py
gemma4/deployments/e2b/solo/: serve.py
gemma4/deployments/e4b/concurrent/: serve.py
gemma4/deployments/e4b/solo/: serve.py
gemma4/deployments/embeddings/: serve_granite.py
gemma4/tests/: test_custom_chat_template.py
pipeline/: README.md  pyproject.toml
pipeline/_common/: __init__.py  eval_scoring.py  gemma4_parser.py  model_registry.py  sglang_common.py  vllm_common.py
pipeline/corpus/: README.md  chinook_tools.py  generate_corpus.py  scrub_corpus.py
pipeline/corpus/personas/: analyst.json  curious_user.json
pipeline/corpus/seeds/: v1.jsonl
pipeline/eval/: README.md  generate_arg_checks.py  score_base_modal.py  test_eval_scoring.py  tool_manifest.py
pipeline/eval/scenarios/: chinook_eval_v1.jsonl
pipeline/scripts/: bench_endpoint.py  download_chinook.sh
pipeline/scripts/bench-results/: 26b-c1.json  26b-c4.json  31b-mtp-off-c1.json  31b-mtp-off-c4.json  e2b-c1.json  e2b-c4.json  e4b-c1.json  e4b-c4.json
pipeline/serve/vllm/: README.md  serve_12b.py  serve_26b.py  serve_31b.py  serve_e2b.py  serve_e4b.py
pipeline/sft/: README.md  compare_eval.py  sft_modal.py
pipeline/sft/presets/: e4b_sft.json
pipeline/sft/probes/subliminal_v1/: README.md  compare_anchor.py  fetch_probe.py  requirements.txt  score_probe.py
qwen/: README.md  pyproject.toml
qwen/_common/: __init__.py  health.py  model_registry.py  sglang_common.py
qwen/bench/: benchmark.py  capture_samples.py  smoke_test.py
qwen/chat_templates/: README.md  TESTING.md  custom_pub_chat_template_qwen36.jinja  live_agentic_probe.py
qwen/chat_templates/results/: README.md  fixed-coding-warm.json  fixed-coding.json  fixedreal-coding-warm.json  fixedreal-coding.json  upstream-coding.json
qwen/deployments/27b/concurrent/: serve.py
qwen/deployments/27b/solo/: serve.py
qwen/deployments/35b/concurrent/: serve.py
qwen/deployments/35b/solo/: serve.py
qwen/tests/: test_custom_pub_chat_template_qwen36.py
spec_decode/: README.md  dspark_reference.py  pyproject.toml
